--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+**/target/
+
 # Package Files #
 *.jar
 *.war
@@ -18,6 +20,9 @@
 *.zip
 *.tar.gz
 *.rar
-
+*.iml
+.idea
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+**/*.baiduyun.uploading.cfg
